# oxigraph

./: Cargo.toml
js/: package.json
lib/: Cargo.toml
lib/src/sparql/: eval.rs  mod.rs  plan.rs
python/: Cargo.toml
python/src/: lib.rs
python/tests/: test_model.py
