[package]
name = "oxigraph_python"
version = "0.1.0"
authors = ["Tpt <thomas@pellissier-tanon.fr>"]
license = "MIT/Apache-2.0"
readme = "../README.md"
keywords = ["RDF", "N-Triples", "Turtle", "RDF/XML", "SPARQL"]
repository = "https://github.com/Tpt/oxigraph"
description = """
Python bindings of Oxigraph
"""
edition = "2018"

[lib]
name = "oxigraph"
crate-type = ["cdylib"]

[dependencies]
oxigraph = {path = "../lib"}
cpython = { version = "0.4", features = ["extension-module"]}
